force-app/main/default/objects/Source_Component__c/Source_Component__c.object-meta.xml
<CustomObject>
    <description>Individual Source Code Components</description>
    <label>Source Component</label>
    <nameField>
        <label>Source Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>