force-app/main/default/objects/Source_Component__c/fields/Github_com_Link__c.field-meta.xml
<CustomField>
    <fullName>Github_com_Link__c</fullName>
    <description>Link to file on github.com</description>
    <formula>HYPERLINK( "https://github.com/aaancnu/mrm/blob/master/" +
CASE( Type__c, 
   'ApexClass', 'src/classes', 
   'ApexPage', 'src/pages', 
   'ApexTrigger', 'src/triggers', 
   'ApexComponent', 'src/components', 
   'Static Resource', 'src/staticresources', 'other'
)
+ "/" + Name, "File on Github.com")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Github.com Link</label>
    <type>Text</type>
</CustomField>