force-app/main/default/objects/Source_Component__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF( CONTAINS( Name, '.cls'), 'ApexClass',
IF( CONTAINS( Name, '.page'), 'ApexPage',
IF( CONTAINS( Name, '.trigger'), 'ApexTrigger',
IF( CONTAINS( Name, '.component'), 'ApexComponent',
IF( CONTAINS( Name, '.resource'), 'StaticResource',
'Unknown')))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>