force-app/main/default/objects/Source_Component__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Unique Key is used to enforce the uniqueness of the Name field</description>
    <label>Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>