force-app/main/default/objects/Source_Component__c/listViews/Customer_TEST.listView-meta.xml
<ListView>
    <fullName>Customer_TEST</fullName>
    <columns>NAME</columns>
    <columns>Github_com_Link__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <label>Customer TEST</label>
</ListView>